# obelisk

./: .dockerignore  .editorconfig  .env.example  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.init  Dockerfile.rag  LICENSE  RAG.md  README.md  TASK.md  TASK_CONTAINERS.md  Taskfile.yaml  copy-docs-to-rag.sh  docker-compose.yaml  docker-entrypoint.sh  index.html  litellm-config.yaml  mkdocs.yml  package-lock.json  package.json  plan.md  pyproject.toml  sitemap.xml  test.sh  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
.zed/: tasks.json
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/cloud/Cloud Native Tooling/: index.html
Initial boilerplate template release/cloud/Cloud Native Tooling/: index.html
chatbot/: index.html
chatbot/architecture/: index.html
chatbot/containerization/: index.html
chatbot/integration/: index.html
chatbot/litellm-integration/: index.html
chatbot/models/: index.html
chatbot/openwebui/: index.html
chatbot/rag/: index.html
chatbot/rag/architecture-draft/: index.html
chatbot/rag/architecture-draft-review/: index.html
chatbot/rag/evaluation/: index.html
chatbot/rag/getting-started/: index.html
chatbot/rag/implementation/: index.html
chatbot/rag/implementation-status/: index.html
chatbot/rag/mvp/: index.html
chatbot/rag/mvp-status/: index.html
chatbot/rag/ollama-integration/: index.html
chatbot/rag/openwebui-integration/: index.html
chatbot/rag/query-pipeline/: index.html
chatbot/rag/using-rag/: index.html
chatbot/rag/vector-database/: index.html
cloud/Cloud Native Tooling/: index.html
customization/: index.html
customization/css/: index.html
customization/html/: index.html
customization/javascript/: index.html
customization/mkdocs-configuration/: index.html
customization/python/: index.html
customization/versioning/: index.html
deployment/container-initialization/: index.html
deployment/testing-openai-integration/: index.html
deployments/docker/: README.md
deployments/docker/compose/: dev.yaml  nvidia.yaml
development/: index.html
development/docker/: index.html
development/documentation/: index.html
development/editor-config/: index.html
development/git-config/: index.html
development/python-config/: index.html
development/task-runner/: index.html
docker/init-scripts/: configure-services.sh  download-models.sh  generate-tokens.sh  init-sequence.sh
docs/: ARCHITECTURE.md  CHANGELOG-migration-chromadb-to-milvus.md  RUNBOOK-DOCUMENTATION.md  containerization-architecture.md  milvus-integration.md
hack/: README.md  test_debug.py  test_e2e_openai.py  test_init.py  test_litellm_openai.py  test_rag.md  test_rag_e2e.py  test_rag_milvus.py
obelisk/: __init__.py  cli.py  config.py  convert.py
obelisk/rag/: __init__.py  api.py  cli.py  config.py  document.py  embedding.py  service.py  storage.py
scripts/: gen-config-docs.py  validate-docs.py
search/: search_index.json
src/: README.md
src/obelisk/: __init__.py  __main__.py
src/obelisk/cli/: __init__.py  commands.py  rag.py
src/obelisk/common/: __init__.py  config.py
src/obelisk/core/: __init__.py
src/obelisk/rag/: __init__.py
tests/: README.md  __init__.py  conftest.py
tests/data/: sample.md
tests/e2e/: __init__.py  test_cli.py
tests/integration/: __init__.py
tests/integration/rag/: test_rag_integration.py
tests/rag/: test_config.py  test_document.py  test_embedding.py  test_service.py  test_storage.py
tests/scripts/: test_coverage_check.py
tests/scripts/debug/: test_debug.py  test_debug_storage.py
tests/scripts/docker/: check_container_versions.sh
tests/scripts/integration/: test_milvus.py  test_openai_integration.sh  test_prep_openai.sh  test_rag.py
tests/unit/: __init__.py
tests/unit/cli/: test_commands.py  test_rag.py
tests/unit/common/: __init__.py  test_config.py
vault/: LEAN_DOCUMENTATION.md  index.md
vault/chatbot/: architecture.md  containerization.md  index.md  integration.md  litellm-integration.md  models.md  openwebui.md
vault/cloud/: Cloud Native Tooling.md
vault/customization/: index.md  mkdocs-configuration.md
vault/deployment/: container-initialization.md  deployment-architecture.md  mac-gpu-acceleration-detailed.md  mac-gpu-acceleration-research.md  testing-openai-integration.md
vault/development/: docker.md  documentation.md  editor-config.md  git-config.md  index.md  python-config.md  task-runner.md
vault/javascripts/: extra.js
vault/overrides/: main.html
vault/stylesheets/: extra.css
(+85 files in other folders)
