[project]
name = "obelisk"
version = "0.1.0"
description = "Obsidian vault to MkDocs Material Theme site generator"
authors = [
    {name = "Obelisk Team"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "mkdocs-material-extensions (>=1.3.1,<2.0.0)",
    "mkdocs-git-revision-date-plugin (>=0.3.2,<0.4.0)",
    "mkdocs-awesome-pages-plugin (>=2.10.1,<3.0.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)",
    "mkdocs-material (>=9.6.11,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
