[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "obelisk"
version = "0.1.0"
description = "Obsidian vault to MkDocs Material Theme site generator"
authors = [
    {name = "Obelisk Team"}
]
readme = "README.md"
requires-python = "^3.12"
license = "MIT"
dependencies = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.6.11,<10.0.0",
    "mkdocs-material-extensions>=1.3.1,<2.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5,<2.0.0",
    "mkdocs-awesome-pages-plugin>=2.10.1,<3.0.0",
    "mkdocs-minify-plugin>=0.8.0,<0.9.0",
    "mkdocs-glightbox>=0.4.0,<0.5.0",
    "mike>=1.1.2,<2.0.0",
    "pymdown-extensions>=10.5,<11.0.0",
    "pillow>=10.2.0,<11.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-ollama>=0.0.1",
    "chromadb>=0.4.24",
    "watchdog>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.5.0",
    "langchain-chroma (>=0.2.2,<0.3.0)"
]

[project.scripts]
obelisk = "obelisk.cli:main"
obelisk-rag = "obelisk.rag.cli:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "W"]
ignore = []
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

